--- a/Chat_App/google-analytics.html
+++ b/Chat_App/google-analytics.html
@@ -1,5 +1,6 @@
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-JKZLWKKCHS"></script>
+
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
@@ -7,3 +8,5 @@
 
   gtag('config', 'G-JKZLWKKCHS');
 </script>
+
+<script src="https://www.googleoptimize.com/optimize.js?id=GTM-W6PGWWL"></script>
